# lenz-briefe

./: CLAUDE.md  OPUS.md  briefe.xml  meta.xml  references.xml  scratchpad.md  traditions.xml
.github/workflows/: verweise.yml
DATA/XML/: briefe.xml  references.xml  traditions.xml
VIEW/: .eleventy.js  .gitignore  README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js
VIEW/src/data/: config.json
VIEW/src/dynamic/: index.md
VIEW/src/layouts/: base.njk
app/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
app/generated-python-check/: status.json
app/generated-python-check/letters/: index.json
app/generated-safety-check/: status.json
app/scripts/: check-generated.mjs  check-generated.test.mjs
app/src/components/: ChronologyMenu.astro  FailurePage.astro  FailureState.astro  Footer.astro  Header.astro  HomePage.astro  LetterBody.astro  (+12 more)
data/xml/: briefe.xml  meta.xml  references.xml  traditions.xml
data/xsd/: briefe.xsd  common.xsd  lenz.xsd  meta.xsd  references.xsd  textelements.xsd
docs/: OPUS.md
scripts/: lint-verweise.py  lint_verweise.py  reference_check_errors.txt  surgical_fix.py  transform-meta-sort.py
transform/: README.md
transform/js/: README.md  package-lock.json  package.json
transform/python/: README.md  pyproject.toml
transform/python/src/transform_python/: __init__.py  benchmark.py  check_coverage.py  cli.py  common.py  exporter.py  verweise.py
transform/src/: check-coverage.mjs  cli.mjs  export.mjs
xslt/: common.xsl  letter-text.xsl  sidenotes.xsl  traditions.xsl
(+2267 files in other folders)
